--- a/build.gradle
+++ b/build.gradle
@@ -20,9 +20,9 @@ plugins {
     id "net.minecraftforge.gradle.forge" version "2.0.2"
 }
 */
-version = "1.0"
-group= "me.doej.networkmonitor" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "networkmonitor"
+version = "2.1"
+group= "me.doej.coppershark" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "coppershark"
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
